--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework # 5</title>
+    <title>Homework # 6</title>
 
     <!-- Fonts -->
     <link
@@ -59,6 +59,43 @@
                                 <use href="./images/icons.svg#close"></use>
                             </svg>
                         </button>
+
+                        <h3>Leave your contacts and we will call you back</h3>
+                        <form class="contact-form">
+                            <label for="name" class="contact-label">
+                                <span class="form-label">Name</span>
+                                <input type="text" class="form-input">
+                                <svg width="18" height="18" class="form-icon">
+                                    <use href="images/icons.svg#person"></use>
+                                </svg>
+                            </label>
+                            <label for="phone" class="contact-label">
+                                <span class="form-label">Phone</span>
+                                <input type="text" class="form-input">
+                                <svg width="18" height="18" class="form-icon">
+                                    <use href="images/icons.svg#phone"></use>
+                                </svg>
+                            </label>
+                            <label for="email" class="contact-label">
+                                <span class="form-label">Email</span>
+                                <input type="text" class="form-input">
+                                <svg width="18" height="18" class="form-icon">
+                                    <use href="images/icons.svg#email"></use>
+                                </svg>
+                            </label>
+                            <label for="comment" class="contact-label">
+                                <span class="form-label">Comment</span>
+                                <textarea class="form-label-textarea" rows="8" placeholder="Text input"></textarea>
+                            </label>
+                            <label for="agree" class="form-agree">
+                                <input type="checkbox" name="agree" value="agree" class="agree-chkbox">
+                                <svg width="16" height="16" class="agree-chk-icon">
+                                    <use href="./images/icons.svg#checkbox"></use>
+                                </svg>
+                                <span class="agree-txt">I accept the terms and conditions of the <a class="privacy" href="">Privacy Policy</a>.</span>
+                            </label>
+                            <button class="send-btn">Send</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -263,6 +300,17 @@
                     <use href="images/icons.svg#linkedin2" fill="white"></use>
                 </svg>
             </div>
+        </div>
+        <div class="bg-sub">
+            <h3>Subscribe</h3>
+            <form class="bg-sub-form">
+                <input type="text" class="input-sub" placeholder="Email">
+                <button class="sub-btn">Subscribe
+                    <svg width="24" height="24">
+                        <use href="images/icons.svg#send"></use>
+                    </svg>
+                </button>
+            </form>
         </div>
     </footer>
 
