--- a/portfolio.html
+++ b/portfolio.html
@@ -235,6 +235,17 @@
                 </svg>
             </div>
         </div>
+        <div class="bg-sub">
+            <h3>Subscribe</h3>
+            <form class="bg-sub-form">
+                <input type="text" class="input-sub" placeholder="Email">
+                <button class="sub-btn">Subscribe
+                    <svg width="24" height="24">
+                        <use href="images/icons.svg#send"></use>
+                    </svg>
+                </button>
+            </form>
+        </div>
     </footer>
 </body>
 
